--- a/produ/templates/main.html
+++ b/produ/templates/main.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>{{ title }}SocialED</title>
     <link rel="preload" href="static/js/jquery-3.5.1.min.js" as="script">
-    <link rel="stylesheet" href="static/css/socialed-style.css" type="text/css"/>
+    <link rel="stylesheet" href="static/css/main.css" type="text/css"/>
 </head>
 <body>
 <header>
